--- a/task_3_01/assets/css/main.css
+++ b/task_3_01/assets/css/main.css
@@ -2,27 +2,21 @@
     margin: 0;
     padding: 0;
 }
-.list-container {
-    padding: 20px;
-    color: black;
-}
-.lists li, .lists button {
-    display: inline-block;
-}
-.error {
-    color: red;
-}
 
-#app {
+.app-container {
+    background: #3ADF00;
+    color: white;
+    height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background: yellow;
 }
 
-h3 {
-    margin-bottom: 15px;
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 input {
@@ -31,35 +25,14 @@ input {
     border: none;
     padding-left: 10px;
 }
+
 input:focus {
-    border: none;
     outline: none;
+    border: none;
 }
 
-.list-group {
+.input-group {
     display: flex;
     align-items: center;
-    gap: 15px;
-    margin-bottom: 10px;
-}
-
-ul li {
-    list-style-type: none;
-}
-
-.btn {
-    border-radius: 30px;
-    height: 25px;
-    display: flex;
-    align-items: center;
-    padding: 0 20px;
-    color: white;
-}
-
-.btn-remove {
-    background: red;
-}
-
-.btn-add {
-    background: greenyellow;
+    gap: 5px;
 }
